[gd_scene load_steps=6 format=3 uid="uid://db5drtid7hj6s"]

[ext_resource type="Texture2D" uid="uid://00urhlnaat23" path="res://Assets/Images/white.png" id="1_grxsm"]
[ext_resource type="Script" path="res://Assets/Scripts/DrinkStationScripts/portafilterBin.gd" id="2_fxg4j"]
[ext_resource type="Script" path="res://Assets/Scripts/ComponentScripts/portafilterContainerComponent.gd" id="3_mkg5e"]
[ext_resource type="Script" path="res://Assets/Scripts/ComponentScripts/portafilterEmptyComponent.gd" id="4_q4pj0"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_a6i4d"]
size = Vector2(480, 110)

[node name="pfilterBin" type="TextureRect" node_paths=PackedStringArray("filterContainer")]
self_modulate = Color(0.25098, 0.168627, 0.192157, 1)
offset_right = 480.0
offset_bottom = 110.0
mouse_filter = 2
texture = ExtResource("1_grxsm")
expand_mode = 1
script = ExtResource("2_fxg4j")
filterContainer = NodePath("portafilterContainerBIN")

[node name="portafilterContainerBIN" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 0
script = ExtResource("3_mkg5e")

[node name="CollisionShape2D" type="CollisionShape2D" parent="portafilterContainerBIN"]
position = Vector2(240, 55)
shape = SubResource("RectangleShape2D_a6i4d")

[node name="PortafilterEmptyComponent" type="Node2D" parent="." node_paths=PackedStringArray("filterContainer")]
script = ExtResource("4_q4pj0")
filterContainer = NodePath("../portafilterContainerBIN")

[connection signal="clearedPortafilter" from="portafilterContainerBIN" to="PortafilterEmptyComponent" method="_on_portafilter_container_bin_cleared_portafilter"]
[connection signal="receivedPortafilter" from="portafilterContainerBIN" to="PortafilterEmptyComponent" method="_on_portafilter_container_bin_received_portafilter"]
[connection signal="emptiedFilter" from="PortafilterEmptyComponent" to="." method="_on_portafilter_empty_component_emptied_filter"]
